--- a/source/Q-Circuit-Editor-NEW.css
+++ b/source/Q-Circuit-Editor-NEW.css
@@ -100,6 +100,9 @@
 	/*display: flex;*/
 	/*flex-direction: column;*/
 	user-select: none;
+}
+.Q-circuit-board-foreground {
+	
 	line-height: 3.85rem;
 }
 
@@ -287,6 +290,7 @@
 	z-index: 100;
 	min-width:  4rem;
 	min-height: 4rem;
+	transform: scale( 1.1 );
 	/*background-color: white;*/
 	/*box-shadow: 0.1rem 0.1rem 1rem rgba( 0, 0, 0, 0.3 );*/
 }
@@ -303,50 +307,10 @@
 .Q-circuit-clipboard > div,
 .Q-circuit-board-foreground > div {
 
-	overflow: hidden;
+	/*overflow: hidden;*/
 	font-style: italic;
 	text-align: center;
 }
-
-.Q-circuit-cell-highlight,
-.Q-circuit-palette > div:hover,
-.Q-circuit-selectall:hover,
-.Q-circuit-moment-label:hover,
-.Q-circuit-register-label:hover,
-.Q-circuit-operation:hover {
-
-	/*background-color: rgba( 255, 255, 255, 0.5 );*/
-	z-index: 90;
-	/*box-shadow: 0.1rem 0.1rem 0.5rem rgba( 0, 0, 0, 0.3 );*/
-	outline: 0.2rem solid white;
-	outline-offset: -0.2rem;
-}
-
-
-.Q-circuit-cell-selected {
-
-	/*background-color: rgba( 255, 255, 255, 0.8 );*/
-	background-color: rgba( 0, 0, 0, 0.1 );
-}
-.Q-circuit-clipboard > div {
-
-	background-color: white;
-	/*box-shadow: 2px 2px 2rem black;*/
-}
-/*.Q-circuit-clipboard > div:after {
-	
-	position: absolute;
-	position: relative;
-	z-index: 10;
-	display: block;
-	background-color: blue;
-	width:  100%;
-	height: 100%;
-	min-width:  200px;
-	min-height: 200px;
-	box-shadow: 2px 2px 2rem black;
-	content: "x";
-}*/
 
 
 
@@ -388,7 +352,7 @@
 
 		var( --Q-color-base-hue ),
 		10%,
-		70%
+		60%
 	);
 	font-family: var( --Q-font-family-mono );
 	/*line-height: 2.9rem;*/
@@ -399,7 +363,7 @@
 	z-index: 3;
 	margin: 0;
 	top:  0;
-	left: 0;
+	left: 4rem;
 /*	width:  50%;
 	height: 50%;*/
 	/*border-top-left-radius: 1rem;*/
@@ -409,7 +373,7 @@
 .Q-circuit-input-header {
 
 	grid-row: 1;
-	grid-column: 2;
+	grid-column: 1;
 	top: 0;
 	/*height: 50%;*/
 }
@@ -417,7 +381,7 @@
 .Q-circuit-moment-add {
 
 	grid-row: 1;
-	top: 0px;	
+	top: 0;	
 	/*height: 50%;*/
 	/*line-height: 0.8rem;*/
 	cursor: s-resize;
@@ -425,8 +389,8 @@
 .Q-circuit-register-label,
 .Q-circuit-register-add {
 
-	grid-column: 1;
-	left: 0px;
+	grid-column: 2;
+	left: 4rem;
 	/*width: 50%;*/
 	cursor: e-resize;
 }
@@ -438,7 +402,7 @@
 .Q-circuit-moment-add,
 .Q-circuit-register-add {
 
-	display: none;
+	/*display: none;*/
 }
 
 
@@ -448,11 +412,14 @@
 
 .Q-circuit-input {
 
-	grid-column: 2;
+	position: sticky;
+	z-index: 2;
+	grid-column: 1;
+	left: 0;
+	background-color: var( --Q-color-background );
 	font-size: 1.5rem;
 	font-weight: 900;
 	font-family: var( --Q-font-family-mono );
-
 }
 
 
@@ -506,7 +473,7 @@
 	/*margin:  0.5rem;*/
 	/*padding: 0.5rem;*/
 
-	box-shadow: 0.1rem  0.1rem 0.2rem rgba( 0, 0, 0, 0.1 );
+	box-shadow: 0.1rem  0.1rem 0.2rem rgba( 0, 0, 0, 0.2 );
 	border-radius: 0.2rem;
 	/*
 	border-top:    0.1rem solid var( --Q-operation-color-light );
@@ -557,6 +524,84 @@
 	--Q-operation-color-main: var( --Q-color-yellow );
 }
 
+
+
+
+
+
+
+
+.Q-circuit-cell-highlighted,
+.Q-circuit-palette > div:hover,
+/*.Q-circuit-selectall:hover,
+.Q-circuit-moment-label:hover,
+.Q-circuit-register-label:hover,
+.Q-circuit-operation:hover {
+*/
+.Q-circuit-board-foreground > div:hover {
+	
+	/*background-color: rgba( 255, 255, 255, 0.5 );*/
+	/*z-index: 90;*/
+	/*box-shadow: 0.1rem 0.1rem 0.5rem rgba( 0, 0, 0, 0.3 );*/
+	/*outline: 0.2rem solid white;*/
+	/*outline-offset: -0.2rem;*/
+	background-color: white;
+}
+
+
+
+
+
+
+
+.Q-circuit-cell-selected {
+
+	background-color: white;
+}
+.Q-circuit-cell-selected:before {
+	
+	/*  
+
+	This was very helpful!
+	https://blog.dudak.me/2014/css-shadows-under-adjacent-elements/
+
+	*/
+	content: "";
+	position: absolute;
+	top:    0;
+	right:  0;
+	bottom: 0;
+	left:   0;
+	z-index: -10;
+	display: block;
+	box-shadow: 0.4rem 0.4rem 0.3rem rgba( 0, 0, 0, 0.2 );
+}
+
+
+
+
+.Q-circuit-clipboard > div {
+
+	background-color: white;
+}
+.Q-circuit-clipboard > div:before {
+	
+	/*  
+
+	This was very helpful!
+	https://blog.dudak.me/2014/css-shadows-under-adjacent-elements/
+
+	*/
+	content: "";
+	position: absolute;
+	top:    0;
+	right:  0;
+	bottom: 0;
+	left:   0;
+	z-index: -10;
+	display: block;
+	box-shadow: 0.4rem 0.4rem 0.3rem rgba( 0, 0, 0, 0.2 );
+}
 
 
 
