--- a/source/Q.css
+++ b/source/Q.css
@@ -137,7 +137,7 @@ svg, :root {
 
 		var( --Q-color-base-hue ),
 		 5%,
-		40%
+		35%
 	);
 	--Q-text-code-comment-color: rgba( 0, 0, 0, 0.25 );
 	--Q-text-code-output-color:  rgba( 0, 0, 0, 1 );
@@ -158,7 +158,7 @@ svg, :root {
 	/*  Fonts  */
 
 	--Q-font-family-serif:   'Source Serif Pro', 'Roboto Slab', 'Georgia', serif;
-	--Q-font-family-sans:    'SF Pro Text', system-ui, -apple-system, 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+	--Q-font-family-sans:    'Rubik', 'SF Pro Text', system-ui, -apple-system, 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
 	--Q-font-family-mono:    'Roboto Mono', 'Source Code Pro', 'Menlo', 'Courier New', monospace;
 	--Q-font-family-symbols: 'Georgia', serif;
 }
